# SecureServerClient

./: CMakeLists.txt  DoxySecureServerClient  README.md  SecureServerClient.pro
.github/workflows/: codeql.yml
SecureClient/: CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  SecureClient.cpp  SecureClient.h  SecureClient.pro
SecureClient/certs/: arise1600_ca.crt  arise1600_local.key
SecureServer/: CMakeLists.txt  New_sClient.cpp  New_sClient.h  SecureServer.cpp  SecureServer.h  SecureServer.pro  main.cpp  resources.qrc
SecureServer/certs/: arise1600_local.crt
docs/html/: _c_make_lists_8txt.html  _main_window_8cpp.html  _main_window_8cpp__incl.map  _main_window_8cpp__incl.md5  _main_window_8h.html  _main_window_8h__dep__incl.map  _main_window_8h__dep__incl.md5  _main_window_8h__incl.map  _main_window_8h__incl.md5  _main_window_8h_source.html  _new__s_client_8cpp.html  _new__s_client_8cpp__incl.map  _new__s_client_8cpp__incl.md5  _new__s_client_8h.html  _new__s_client_8h__dep__incl.map  _new__s_client_8h__dep__incl.md5  _new__s_client_8h__incl.map  _new__s_client_8h__incl.md5  _new__s_client_8h_source.html  _r_e_a_d_m_e_8md.html  _secure_client_2_c_make_lists_8txt.html  _secure_client_2main_8cpp.html  _secure_client_2main_8cpp__incl.map  _secure_client_2main_8cpp__incl.md5  _secure_client_8cpp.html  _secure_client_8cpp__incl.map  _secure_client_8cpp__incl.md5  _secure_client_8h.html  _secure_client_8h__dep__incl.map  _secure_client_8h__dep__incl.md5  _secure_client_8h__incl.map  _secure_client_8h__incl.md5  _secure_client_8h_source.html  _secure_server_2_c_make_lists_8txt.html  _secure_server_2main_8cpp.html  _secure_server_2main_8cpp__incl.map  _secure_server_2main_8cpp__incl.md5  _secure_server_8cpp.html  _secure_server_8cpp__incl.map  _secure_server_8cpp__incl.md5  (+58 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  defines_0.js  defines_1.js  defines_2.js  files_0.js  files_1.js  files_2.js  files_4.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  namespaces_0.js  pages_0.js  searchdata.js  (+14 more)
